--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <div>
+     <ol class="shopping">
+           <li class="shoppingList">shopping list</li>
+           <li class="shoppingList">shopping list</li>
+           <li class="shoppingList">shopping list</li>
+     </ol>
+      <ul class="place">
+            <li class="holidayList">holidayList</li>
+            <li class="holidayList">holidayList</li>
+            <li class="holidayList">holidayList</li>
+      </ul>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
